<resources>
    <string name="app_name">ToDo List</string>
    <string name="enter_task_hint">Enter Task</string>
    <string name="add_task_button">Add Task</string>
    <string name="selected_date">Selected Date</string>
    <string name="selected_time">Selected Date</string>
    <string name="select_date_button">Select Date</string>
    <string name="select_time_button">Select Time</string>
    <string name="selected_date_text">Selected Date</string>
    <string name="selected_time_text">Selected Time</string>
</resources>