<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <EditText
            android:id="@+id/taskEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_hint"
            android:inputType="textMultiLine"
            android:autofillHints=""
            android:background="@android:color/white"
            android:padding="8dp" />

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_task_button"
            android:minWidth="100dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_button"
            android:minWidth="100dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time_button"
            android:minWidth="100dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date_text"
            android:padding="8dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_time_text"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <ListView
            android:id="@+id/toDoListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

</LinearLayout>
